@@ -17,6 +17,10 @@ cdebconf (0.80) UNRELEASED; urgency=low
       database is retained as a fallback.
     - Add template instance for the debconf database in /target to the
       distributed cdebconf.conf, and associate it with target_configdb.
+    - Remove assumption that RFC822 lines are no more than 8192 bytes long:
+      the config entry for console-data/keymap/full violates that. In the
+      process, consolidate the multiple duplicate definitions of
+      unescapestr() and escapestr() into one place.
 
  -- Colin Watson <cjwatson@debian.org>  Wed, 15 Jun 2005 16:16:34 +0100
 
